mxslc/tests/data/error/delayed_var_decl_1.mxsl

float foo(float a = a_default_value)
{
    return a + 1.0;
}

float a_default_value = 0.8;

foo();
